tests/mut_newtype_rec_hint.test
type Foo = | Bar Foo
;
####
SyntaxError: Undefined type
type Foo = | Bar Foo
                 ^~~ 
;
Hint: Consider making the definition recursive like this:
type rec Foo = | Bar Foo
     ++++                
;
